# hpcourse

itmo/M4236/goryacheva/3/: CMakeLists.txt  convolution.cl  main.cpp
itmo/M4236/goryacheva/4/: CMakeLists.txt  main.cpp  output.txt  prefix.cl
